@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [Zenmap] It is now possible to compare scans having the same name or
+  command line. [Jah, David Fifield]
+
 o [NSE] Added rdp-vuln-ms12-020.nse by Aleksandar Nikolic. This tests
   for two Remote Desktop vulnerabilities, including one allowing
   remote code execution, that were fixed in the MS12-020 advisory.
